--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
        <div class="row">
         {% for post in site.posts %}
         
-        <div class="col s12 m6">
+        <div class="col m12 l6">
           <div class="card cyan lighten-2">
             <div class="card-content white-text">
               <span class="card-title">{{ post.title }}</span>
