--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 ---
 layout: default 
 ---
-<div class="" style="margin-top:50px;">
+<div class="" style="margin-top:20px;">
        <div class="row">
         {% for post in site.posts %}
         
         <div class="col m12 l6">
-          <div class="card cyan lighten-1 z-depth-1">
+          <div class="card {{ site.css }} darken-1 z-depth-1">
             <div class="card-content white-text">
               <span class="card-title">{{ post.title }}</span>
               <p>{{ post.date | date: "%b %-d, %Y" }}</p><br/>
               <x class="clamp-module">{{ post.content | strip_html | truncatewords: 100}}</x>
             </div>
-            <div class="card-action">
-              <button class="white cyan-text lighten-5 waves-effect waves-cyan waves-light btn" onclick="window.location.href='{{ post.url | prepend: site.baseurl }}'">View Post</button>
-              <button class="white cyan-text lighten-5 waves-effect waves-light btn" href='#'>Share on Facebook</button>
+            <div class="card-action {{ site.css }} darken-2">
+              <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn" onclick="window.location.href='{{ post.url | prepend: site.baseurl }}'">View Post</button>
+              <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn" href='#'>Bookmark!</button>
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
       
-      <a href="{{ " /feed.xml " | prepend: site.baseurl }}" class="cyan lighten-1 waves-effect waves-light btn"><i class="mdi-file-cloud left"></i>Subscribe to RSS Feed</a>
+      <a href="{{ " /feed.xml " | prepend: site.baseurl }}" class="{{ site.css }} darken-1 waves-effect waves-light btn"><i class="mdi-file-cloud left"></i>Subscribe to RSS Feed</a>
 
 </div>
