--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 permalink: /blog/
 ---
 <div class="" style="margin-top:20px;">
-       <div class="row">
+       <div class="row" style="min-height:500px;">
         {% for post in site.posts %}
         
         <div class="col m12 l6">
