--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default 
 ---
-<div class="" style="margin-top:20px;">
+<div>
        <div class="row" style="min-height:4500px;">
        
        
