Added mobile skrollr support

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div>
 
+<div id="skrollr-body">
 <div id="non-skrollr">
    
     <div class="container-fluid">
@@ -94,7 +95,7 @@ layout: default
 
 
 </div>
-
+</div>
 
 
 
@@ -334,17 +335,20 @@ layout: default
                 <div class="cover z-depth-1" style="background-image: url('/img/0.jpg');">
                     <div class="filter {{site.css}}">
                         <div class="cover-text {{ site.css }}-text text-darken-4">
-                            naveenshaji
+                            <3
                         </div>
                     </div>
                 </div>
                 <div class="card-content white-text">
-                    <div class="card-title">Hello</div>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Morbi congue eros id nisl sagittis accumsan. Nam nec odio dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Morbi congue eros id nisl sagittis accumsan. Nam nec odio dolor.
+                    <div class="card-title"><b>material</b> by <b>naveenshaji</b></div>
+                    Thanks to MaterializeCSS, Skrollr, Scrolline.js, Jekyll and GitHub.<br>
+                    They form an <b>integral part</b> of this project.<br>
+                    And material would not have been possible without them awesome <b>open-source</b> frameworks.<br>
+                    &copy; 2015 naveenshaji - Released under the <b>MIT Licence</b>.
                 </div>
                 <div class="card-action {{ site.css }} darken-2">
-                    <button href="{{ post.url | prepend: site.baseurl }}" class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn">View Post</button>
-                    <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn" href='#'>Bookmark!</button>
+                    <button href="{{ post.url | prepend: site.baseurl }}" class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn">Tech involved</button>
+                    <button class="{{ site.css }} darken-1 white-text text-darken-3 waves-effect waves-light btn" href='#'> Get the code</button>
                 </div>
             </div>
         </div>
