Added work in progress label and link to github repo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ layout: default
             <h4>a <b>solid</b> way to make your presence felt</h4> free &amp; <b>open-source</b> way to a one-click blog/website on <b>GitHub</b> with Jekyll and MaterializeCSS
             <br>
             <h6>based on google&trade;'s <b>material design</b> specifications</h6>
-            <h4><b>no-bullshit-involved</b></h4>
+            <h4><b>work-in-progress</b></h4>
+            <a target="_blank" href="http://github.com/naveenshaji/material" class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i class="mdi-action-get-app"></i> View on github</a><br>
             <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
         </div>
     </div>
