--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@ layout: default
    
     <div class="container-fluid">
         <div class="mast">
-            <img src='/img/hit_logo_transp.png' width=768 border=0>
-            <h4>a <b>solid</b> way to make your presence felt</h4> free &amp; <b>open-source</b> way to a one-click blog/website on <b>GitHub</b> with Jekyll and MaterializeCSS
-            <br>
-            <h6>based on google&trade;'s <b>material design</b> specifications</h6>
-            <h4><b>work-in-progress</b></h4>
-            <a target="_blank" href="http://github.com/naveenshaji/material" class="{{ site.css }} darken-2 white-text text-darken-3 waves-effect waves-light btn"><i class="mdi-action-get-app"></i> View on github</a><br>
+            <img src='/img/hit_logo_transp.png' width=500 border=0><br>
+            <img src='/img/hit_crosswords.png' width=500 border=0>
             <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
         </div>
     </div>
