--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <div class="container-fluid">
         <div class="mast">
             <img src='/img/hit_logo_transp.png' width=500 border=0><br>
-            <img src='/img/hit_crosswords.png' width=500 border=0>
+            <img src='/img/hit_crosswords.png' width=500 border=0><br>
             <i class="mdi-navigation-arrow-drop-down" style="font-size: 200px;"></i>
         </div>
     </div>
@@ -17,24 +17,18 @@ layout: default
 
 
     <div class="container-fluid card {{ site.css }} z-depth-2 waves-effect waves-light">
-        <div class="cover z-depth-1" style="background-image: url('/img/1.jpg');">
+        <div class="cover z-depth-1" style="background-image: url('/img/hit_cube_transp.png');">
             <div class="filter {{site.css}}" style="opacity: 0.7;">
                 <div class="cover-text {{ site.css }}-text text-darken-4">
-                    <span style="font-size: 50px;">< about-material /></span>
+                    <span style="font-size: 50px;">Unsere Dienstleistungen</span>
                 </div>
             </div>
         </div>
         <div class="card-content white-text">
             <div class="card-title">
-                <h4>about-material</h4>
+                <h4>Unsere Leitungen</h4>
             </div>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in.
-            <br>
-            <br> Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem. Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            <br>
-            <bR> Aliquam vel purus sagittis, eleifend ante quis, tempus lectus. Vivamus maximus nibh lectus, sed gravida sapien imperdiet in. Curabitur non purus rutrum, iaculis mauris ac, placerat turpis. Donec vel semper enim, ut ultrices sem.
-            <br>
-            <br> Fusce rutrum, justo id porta malesuada, purus erat gravida metus, sit amet viverra turpis lacus nec mi. Aliquam et mi vel ipsum mollis aliquam eu eget augue.
+            Von der Beratung bis hin zur komplexen Projektleitung biete ich Ihnen alle Dienstleistungen rund um Server, Internet, Voice-over-IP, Internetaccess, dynamischen Routingprotokollen und vielem Mehr.<br>Sollten Sie Interesse haben, zögern Sie nicht, mich zu kontaktieren.<br><br>Tel: 05731 / 60 69 0-0<br>Fax: 05731 / 60 69 0-29<br>Email: <a href='mailto:jh@hokamp-it.de>jh@hokamp-it.de</a><br> 
         </div>
     </div>
 
