--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
             <div class="card-title">
                 <h4>Unsere Leitungen</h4>
             </div>
-            Von der Beratung bis hin zur komplexen Projektleitung biete ich Ihnen alle Dienstleistungen rund um Server, Internet, Voice-over-IP, Internetaccess, dynamischen Routingprotokollen und vielem Mehr.<br>Sollten Sie Interesse haben, zögern Sie nicht, mich zu kontaktieren.<br><br>Tel: 05731 / 60 69 0-0<br>Fax: 05731 / 60 69 0-29<br>Email: <a href='mailto:jh@hokamp-it.de>jh@hokamp-it.de</a><br> 
+            Von der Beratung bis hin zur komplexen Projektleitung biete ich Ihnen alle Dienstleistungen rund um Server, Internet, Voice-over-IP, Internetaccess, dynamischen Routingprotokollen und vielem Mehr.<br>Sollten Sie Interesse haben, zögern Sie nicht, mich zu kontaktieren.<br><br>Tel: 05731 / 60 69 0-0<br>Fax: 05731 / 60 69 0-29<br>Email: <a href='mailto:jh@hokamp-it.de'>jh@hokamp-it.de</a><br> 
         </div>
     </div>
 
