--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
             <div class="card-title">
                 <h4>Unsere Leistungen</h4>
             </div>
-            Von der Beratung bis hin zur komplexen Projektbetreuung bieten wir Ihnen alle Dienstleistungen rund um Server, Internet, Voice-over-IP, Internetaccess, dynamische Routingprotokolle und vielem Mehr.<br>Sollten Sie Interesse haben, zögern Sie nicht mit uns in Kontakt zu treten.<br><br>Tel: 05731 / 60 69 0-0<br>Fax: 05731 / 60 69 0-29<br>Email: <a href='mailto:info@hokamp-it.de'>info@hokamp-it.de</a><br> 
+            Von der Beratung bis hin zur komplexen Projektbetreuung bieten wir Ihnen alle Dienstleistungen rund um Server, Internet, Voice-over-IP, Internetaccess, dynamische Routingprotokolle und vielem mehr.<br>Sollten Sie Interesse haben, zögern Sie nicht mit uns in Kontakt zu treten.<br><br>Tel: 05731 / 60 69 0-0<br>Fax: 05731 / 60 69 0-29<br>Email: <a href='mailto:info@hokamp-it.de'>info@hokamp-it.de</a><br> 
         </div>
     </div>
 
